Fixed the dropdown button flashing different colors like a link would. Changed border when focusing an issue to match desktop. Removed rounded edges when hovering over a nav-link on mobile.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -51,6 +51,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
+    border-radius: 0;
     padding: 0;
 }
 
@@ -63,15 +64,23 @@ body {
 }
 
 .issue:focus {
-    border: 2mm inset black;
+    border: 1mm inset black;
 }
 
 .dropdown:focus-within .nav-links{
     display: block;
 }
 
+.dropbutton:link {
+    color: black;
+}
+
 .dropbutton:active {
-    text-decoration: none;
+    color: black;
+}
+
+.dropbutton:visited {
+    color: black;
 }
 
 .text {
